# eleccionescr

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  CONTRIBUTING.md  DOCKER_COMPOSE_README.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  LICENSE  RAILWAY_DEPLOYMENT.md  README.md  SECURITY.md  TROUBLESHOOTING.md  docker-compose.prod.example.yml  docker-compose.prod.yml  docker-compose.yml  railway.toml
.github/: FUNDING.yml  WORKFLOWS_README.md  dependabot.yml
backend-py/: .dockerignore  .env.example  .gitignore  Dockerfile  LANGFUSE_IMPROVEMENTS.md  README.md  pyproject.toml  ruff.toml  run.py
backend-py/app/: config.py  main.py  models.py  party_metadata.py
backend-py/app/agents/: classifier.py  graph.py  prompts.py  retrieval.py
backend-py/app/middleware/: rate_limit.py
backend-py/app/services/: auth.py  circuit_breaker.py  embeddings.py  langfuse_service.py  llm.py  qdrant.py  retry.py
backend-py/app/services/llm_providers/: __init__.py  base.py  factory.py  google_provider.py  openai_provider.py
backend-py/app/utils/: logging.py
backend-py/examples/: langfuse_tracing_demo.py
backend-py/scripts/: ci-check.sh  dev-setup.sh
backend-py/tests/: __init__.py  test_api.py  test_auth_ratelimit.py  test_checkpointer.py  test_embeddings.py  test_langfuse.py  test_langfuse_integration.py  test_llm_providers.py  test_logging_utils.py  test_rate_limit_handling.py
frontend/: .env.example  .eslintrc.json  .prettierignore  Dockerfile  README.md  (+6 more)
ingest/: .gitignore  Dockerfile  QUALITY_VERIFICATION_GUIDE.md  README.md  ingest.py  main.py  pyproject.toml  quick_query.py  verify_quality.py
(+21 files in other folders)
