[project]
name = "ingest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pypdf>=6.4.0",
    "qdrant-client>=1.16.1",
    "langchain-huggingface>=0.1.0",
    "langchain-openai>=0.2.0",
    "sentence-transformers>=3.3.1",
]
